@startuml
!include .PlantUML.config

skinparam nodesep 30

class Storage <<singleton>> {
    + {static} DATA_PATH: String = "catalog.json"
    - Storage()
    + getInstance(): Storage
    + readAuthorListFromDataFile(): AuthorList
    + saveAuthorListToDataFile(authorList: AuthorList): AuthorList
    - createFileIfNeeded(): boolean
}
Storage *-- "0..1 storage" Storage
note bottom of Storage: Only a maximum of one instance can exist

class StorageHelper <<utility>> {
    + {static} readFile()
    + {static} saveFile(authorList: AuthorList)
}
note right: simplifies calls
StorageHelper ..> Storage : accesses

class CommandThatModifies {
    + execute(ui: Ui, authorList: AuthorList): void
}
note bottom: AddAuthorCommand, DeleteMangaCommand, AddSalesCommand, etc.
CommandThatModifies .> StorageHelper : uses

class AuthorList
AuthorList <. Storage : read
AuthorList <. Storage : save

@enduml